--- a/src/scss/base/_customVariables.scss
+++ b/src/scss/base/_customVariables.scss
@@ -1,3 +1,5 @@
+$font-size-base: 1rem;
+
 .margin-sm-bot {
   margin-bottom: 1.5rem;
   //   margin-top: 1.5rem;
@@ -9,4 +11,33 @@
 
 .margin-m-top {
   margin-top: 4rem;
+}
+
+$font-size-root: 10px !important;
+
+$font-size-sm: 1rem !important;
+$font-size-lg: 1.6rem !important;
+
+$font-weight-lighter: lighter !important;
+$font-weight-light: 300 !important;
+$font-weight-normal: 400 !important;
+$font-weight-bold: 700 !important;
+$font-weight-bolder: bolder !important;
+
+$font-weight-base: $font-weight-normal !important;
+
+$line-height-base: 1.7 !important;
+$line-height-sm: 1.25 !important;
+$line-height-lg: 2 !important;
+
+$h1-font-size: 4.8rem !important;
+$h2-font-size: 3.8rem !important;
+$h3-font-size: 2.4rem !important;
+$h4-font-size: 1.8rem !important;
+$h5-font-size: 1.4rem !important;
+$h6-font-size: 1.2rem !important;
+
+h1,
+.h1 {
+  font-size: calc(1.375rem + 1.5vw) !important;
 }
